--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.31'
-    ext.ktor_version = '1.2.0-rc'
+    ext.ktor_version = '1.2.0-rc2'
     ext.kotlinx_coroutines_version = '1.2.1'
     ext.kotlinx_serialization_version = '0.11.0'
     repositories {
