--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -46,28 +46,37 @@ kotlin {
             api 'org.jetbrains.kotlin:kotlin-stdlib-common'
             implementation "com.soywiz:klock-metadata:1.4.0"
             implementation "io.ktor:ktor-client-core:$ktor_version"
+            implementation "io.ktor:ktor-client-json:$ktor_version"
+            implementation "io.ktor:ktor-client-logging:$ktor_version"
+            implementation "io.ktor:ktor-client-serialization:$ktor_version"
             implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$kotlinx_coroutines_version"
-            implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$kotlinx_serialization_version"
         }
 
         androidMain.dependencies {
             api 'org.jetbrains.kotlin:kotlin-stdlib'
             implementation "io.ktor:ktor-client-android:$ktor_version"
+            implementation "io.ktor:ktor-client-json-jvm:$ktor_version"
+            implementation "io.ktor:ktor-client-serialization-jvm:$ktor_version"
+            implementation "io.ktor:ktor-client-logging-jvm:$ktor_version"
             implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_version"
         }
 
         iosMain.dependencies {
             implementation "io.ktor:ktor-client-ios:$ktor_version"
+            implementation "io.ktor:ktor-client-json-native:$ktor_version"
+            implementation "io.ktor:ktor-client-serialization-native:$ktor_version"
+            implementation "io.ktor:ktor-client-logging-native:$ktor_version"
             implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-native:$kotlinx_coroutines_version"
-            implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime-native:$kotlinx_serialization_version"
         }
 
         jsMain {
             dependencies {
                 api 'org.jetbrains.kotlin:kotlin-stdlib-js'
                 api "io.ktor:ktor-client-js:$ktor_version"
+                api "io.ktor:ktor-client-json-js:$ktor_version"
+                api "io.ktor:ktor-client-serialization-js:$ktor_version"
+                api "io.ktor:ktor-client-logging-js:$ktor_version"
                 api "org.jetbrains.kotlinx:kotlinx-coroutines-core-js:$kotlinx_coroutines_version"
-                api "org.jetbrains.kotlinx:kotlinx-serialization-runtime-js:$kotlinx_serialization_version"
             }
         }
     }
